--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ ul.submenu >li >a:hover {
 				width: 200px;
 			}
 			
-			 #menu li {
+			 .nav li {
 				display: block;
 			}
 			.menu-item {
